<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Main content layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#1877F2"
            android:padding="16dp">

            <ImageView
                android:id="@+id/icon_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_check_circle_24"
                app:tint="@color/white"
                android:contentDescription="@string/check_icon_description"
                />

            <TextView
                android:id="@+id/tv_all_lists"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/all_lists"
                android:textColor="@android:color/white"
                android:layout_toEndOf="@id/icon_check"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap"
                android:textAppearance="@style/ArialBlackTextView"/>

            <Spinner
            android:id="@+id/icon_arrow"
            app:tint="@color/white"
            android:contentDescription="@string/icon_arrow"
                android:layout_toEndOf="@+id/tv_all_lists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
android:src="@drawable/baseline_arrow_drop_down_24"
                />
            <ImageView
                android:id="@+id/icon_search"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_search_24"
                app:tint="@android:color/white"
                android:contentDescription="@string/search_icon"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:id="@+id/icon_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_menu_24"
                app:tint="@android:color/white"
                android:contentDescription="@string/menu_icon_description"
                android:layout_toLeftOf="@id/icon_search"
                android:layout_marginEnd="16dp"
                tools:ignore="RtlHardcoded" />
        </RelativeLayout>

        <!-- Main content (Empty state with palm trees and "Nothing to do") -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true"
            tools:ignore="RelativeOverlap">

            <ImageView
                android:id="@+id/iv_file"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_custom_icon_png"
                android:contentDescription="@string/file_button"/>

            <TextView
                android:id="@+id/tv_nothing_to_do"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nothing_to_do"
                android:textStyle="bold"
                android:textAppearance="@style/ArialBlackTextView"

                android:textColor="#B2B3B6"
                android:textSize="16sp"
                android:layout_marginTop="10dp" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/circularButton"
            android:layout_width="181dp"
            android:layout_height="182dp"
            android:layout_marginTop="580dp"
            android:layout_marginStart="50dp"
            android:contentDescription="@string/add_button"
            app:shapeAppearance="@style/Widget.Material3.CircularProgressIndicator.ExtraSmall"
            app:backgroundTint="#F3F4F6"
            android:tint="#304FFE"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:src="@drawable/baseline_add_24" />

        <RelativeLayout
            android:id="@+id/rl_bottom_input"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:background="#1877F2"
            android:layout_alignParentBottom="true">



            <ImageView
                android:id="@+id/iv_mic"
                android:contentDescription="@string/mic_icon_description"
                android:src="@drawable/baseline_mic_24"
            app:tint="@android:color/white"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            tools:ignore="HardcodedText"
                android:background="#1877F2"
                />

            <EditText
                android:id="@+id/et_quick_task"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:minHeight="50dp"
                android:hint="@string/enter_quick_task_here"
                android:textSize="20sp"
                android:importantForAutofill="no"
                android:textColorHint="@color/white"
                android:textAppearance="@style/ArialBlackTextView"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:layout_toEndOf="@id/iv_mic"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="6dp"
                tools:ignore="Autofill,TextFields"/>

        </RelativeLayout>
    </RelativeLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ExtraText">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_lists"
                android:textSize="18sp"
            android:padding="16dp"
            android:textStyle="bold" />

            <ListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/new_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_list"
                />

        </LinearLayout>
</LinearLayout>
